# simple-kafka

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/server/: connection_message.rs  mod.rs  topic.rs
src/server/client/: client_type.rs  mod.rs  publisher.rs  server_broker.rs  subscriber.rs
tests/: message.rs  publisher.rs  subscriber.rs  tests.rs  utils.rs
