[package]
name = "simple-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
log = { version = "0.4.20" }
simplelog = { version = "0.12.1" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }


[dev-dependencies]
time = { version = "0.3.30" }
tuple-conv = { version = "1.0.1" }
env_logger = { version = "0.10.1" }
